# ontology-demo

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
config/: settings.py
config/prompts/: extract_graph.py  pdf_to_md_prompt.py  pdf_to_md_prompt.yml
ingestion/: chunker.py  ner.py  pdf_to_md.py  semantic_chunker.py
notebooks/: 01_openai_llm_connection_test.ipynb  02_openai_embedding_connection_test.ipynb  03_neo4j_connection_test.ipynb  04_neo4j_index.ipynb  05_parquet_show.ipynb
